# gridtools

./: .clang-format  .gitignore  .gitmodules  .gitpod.Dockerfile  .gitpod.yml  .travis.yml  AUTHORS  CITATION.cff  CMakeLists.txt  Doxyfile.in  GridToolsConfig.cmake.in  GridToolsConfigVersion.cmake.in  HowToBuildOnKesch.txt  LICENSE  LICENSE_HEADER  NOTICE  README.md  Vagrant_bootstrap.sh  Vagrantfile  _config.yml  debug_mpi.c  gridtools_run.sbatch  gridtools_setup.sh  index.html  index.md  mainpage.dox  params.json  processResults.sh  rundaint.sh  runsalomon_cg.pbs  runsalomon_cg.sh  setup.cfg  setup.py  team.html  test_compilation.sh  version.txt
.python_package/: .gitignore  DEVELOPMENT.md  MANIFEST.in  README.md  noxfile.py  setup.cfg  setup.cfg.in  setup.py
.python_package/tests/: test_dirs.py
examples/: #interface1.cpp#  .gitignore  CMakeLists.txt  CMakeLists.txt.in  CMakeLists.txt.skeleton.in  CSRdouble.cpp  CSRdouble.hpp  Options.cpp  Options.hpp  ParDiSO.cpp  ParDiSO.hpp  PardisoParameters.cpp  PardisoParameters.hpp  README.md  Timers.hpp  advection_pdbott_compare.hpp  advection_pdbott_prepare_tracers.cpp  advection_pdbott_prepare_tracers.cu  advection_pdbott_prepare_tracers.hpp  advection_pdbott_prepare_tracers_cxx03.hpp  alignment.cpp  alignment.cu  alignment.hpp  backend_select.hpp  basic_laplacian.cpp  benchmarker.hpp  boundary-condition.cpp  boundary-condition.cu  build.sh  build_daint.sh  build_dom.sh  build_greina-python.sh  build_greina.sh  cache_flusher.hpp  cg.cpp  cg.cu  cg.h  cg.hpp  cg_naive.cpp  cg_naive.cu  (+151 more)
examples/IGA/: b_splines.h  basis_functions.h
examples/__gridtools_rbd7hngl/: CopyStencil_h8gg0w8l.h  CopyStencil_ktygrh_9.cpp  Makefile_pm6_fcz3
examples/boundaries/: boundaries.cpp  boundaries.cu  boundaries_provided.cpp  boundaries_provided.cu
examples/boundary-conditions/: CMakeLists.txt.in  boundary-conditions.cpp
examples/boundary_conditions/: CMakeLists.txt  boundary-condition_copy_HorizontalDiffusionSmagorinskyUpdate.cpp  boundary-condition_copy_HorizontalDiffusionSmagorinskyUpdate.cu  boundary-condition_interpolation_FWSCPPDivergence.cpp  boundary-condition_zerogradient_TimeIntegratorHaloUpdateW.cpp  boundary-condition_zerogradient_TimeIntegratorHaloUpdateW.cu  boundary_conditions.cpp  boundary_conditions.cu  boundary_conditions_provided.cpp  boundary_conditions_provided.cu  ij_predicate.hpp
examples/c_bindings/: CMakeLists.txt  CMakeLists.txt.in  README  copy_stencil_lib_cu.f90  copy_stencil_lib_mc.f90  copy_stencil_wrapper.cpp  copy_stencil_wrapper.cu  driver.F90  driver.c  driver.f90  driver_cpu.c  driver_cpu_ifirst.c  driver_cu.c  driver_cuda.c  driver_cuda.f90  driver_gpu.c  driver_mc.c  fdriver-wrapper.f90  fdriver.f90  header_generator.cpp  implementation-wrapper.cpp  implementation.cpp
examples/cmake_skeletons/: CMakeLists.txt.driver.in  CMakeLists.txt.example.in
examples/communication/: CMakeLists.txt  run_communication_tests.sh  test_all_to_all_halo.cpp  test_all_to_all_halo_3D.cpp  test_all_to_all_ij_ji.cpp  test_async_progress_3D_generic.cpp  test_async_progress_3D_generic.cu  test_generic_all_to_all.cpp  test_halo_exchange.cpp  test_halo_exchange_2D.cpp  test_halo_exchange_2D_generic.cpp  test_halo_exchange_2D_generic.cu  test_halo_exchange_3D.cpp  test_halo_exchange_3D_all.cpp  test_halo_exchange_3D_all.cu  test_halo_exchange_3D_all_2.cpp  test_halo_exchange_3D_all_2.cu  test_halo_exchange_3D_all_3.cpp  test_halo_exchange_3D_all_3.cu  test_halo_exchange_3D_all_new.cpp  test_halo_exchange_3D_all_new.cu  test_halo_exchange_3D_generic.cpp  test_halo_exchange_3D_generic.cu  test_halo_exchange_3D_generic_full.cpp  test_halo_exchange_3D_generic_full.cu  triplet.h  triplet.hpp
examples/computation/: CMakeLists.txt  CMakeLists.txt.in  driver.cpp  interpolate_stencil.cpp  interpolate_stencil.hpp
examples/div/: CMakeLists.txt  FindNetCDF.cmake  IconToGridTools.cpp  IconToGridTools.hpp  IconToStructured.cpp  IconToStructured.hpp  div.cpp  div.hpp  div_defs.hpp  (+1 more)
gt_examples/: CMakeLists.txt
regression/: CMakeLists.txt  advection_pdbott_prepare_tracers.cpp  advection_pdbott_prepare_tracers.cu  advection_pdbott_prepare_tracers.hpp  alignment.cpp  alignment.cu  alignment.hpp  benchmarker.hpp  boundary-condition.cpp  boundary-condition.cu  boundary_condition.cpp  boundary_condition.cu  boundary_conditions.cpp  boundary_conditions.cu  cache_flusher.hpp  copy_stencil.cpp  copy_stencil.cu  copy_stencil.hpp  copy_stencil_parallel.cpp  copy_stencil_parallel.cu  copy_stencil_parallel.hpp  data_store_field_test.cu  defs.hpp  expandable_parameters.cpp  expandable_parameters.cu  expandable_parameters.hpp  expandable_parameters_single_kernel.cpp  expandable_parameters_single_kernel.cu  extended_4D.cpp  extended_4D.cu  extended_4D.hpp  generic_benchmark.hpp  horizontal_diffusion.cpp  horizontal_diffusion.cu  horizontal_diffusion_functions.cpp  horizontal_diffusion_functions.cu  horizontal_diffusion_fused.cpp  horizontal_diffusion_fused.cu  horizontal_diffusion_repository.hpp  interface1.cpp  (+34 more)
src/: CMakeLists.txt  GCL.cpp  gridtools.cpp  main.cpp  stats_collector.cpp
tests/: CMakeLists.txt  test_storage_facility.cpp  test_storage_facility.cu
unit_tests/: CMakeLists.txt  FunctorDoMethodLookupMaps.cpp  FunctorDoMethods.cpp  LoopIntervals.cpp  accessor_tests.h  accessor_tests.hpp  arg_type_tests.h  backend_select.hpp  boundary_conditions_test.cpp  boundary_conditions_test.cu  boundary_conditions_test.h  boundary_conditions_test.hpp  cloning_derived.cu  cloningstuff.cu  cloningstuff.cu.hpp  copies_2D_1D_0D.h  copies_2D_1D_0D.hpp  cuda_gtest_plugin.hpp  cuda_test_helper.hpp  gpu_clone.cu  gpu_clone.cu.hpp  gtest_iterate_domain.cpp  linking_issue.cpp  linking_issue.cu  linking_issue.hpp  loop_hierarchy_test.h  loop_hierarchy_test.hpp  ndloops.cpp  stencil_tests.h  stencil_tests.hpp  test-assign-placeholders.cpp  test-assign-placeholders.hpp  test-independent.cpp  test_bc.cpp  test_bc.cu  test_cuda_storage.cu  test_cuda_storage.hpp  test_cuda_storage_exe.cu  test_cuda_test_helper_example.cu  test_cxx11_cuda_test_helper_example.cu  (+28 more)
(+5285 files in other folders)
