[metadata]
name = gridtools
author = ETH Zurich
author_email = gridtools@cscs.ch
license = bsd3
license_files = LICENSE
url = https://gridtools.github.io
project_urls =
    Source Code = https://github.com/GridTools/gridtools

[options]
zip_safe = False
packages = find:
package_dir = 
    =py_src
include_package_data = True
python_requires = >= 3.10
install_requires = 
  cmake>=3.18.1

[options.packages.find]
where = py_src

[tools:isort]
line_length = 100

[flake8]
max-line-length = 100
