[metadata]
name = gridtools
author = ETH Zurich
author_email = gridtools@cscs.ch
license = bsd3
license_files = LICENSE
url = https://gridtools.github.io
project_urls =
    Source Code = https://github.com/GridTools/gridtools

[options]
python_requires = >= 3.4
install_requires = 
  cmake>=3.18.1

[tools:isort]
line_length = 100

[flake8]
max-line-length = 100
