[metadata]
name = gridtools-cpp
author = ETH Zurich
author_email = gridtools@cscs.ch
license_files = LICENSE
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://gridtools.github.io
project_urls = 
	Source Code = https://github.com/GridTools/gridtools
platforms = any
version = 2.2.0
	
classifiers = 
	Development Status :: 5 - Production/Stable
	License :: OSI Approved :: BSD License
	Intended Audience :: Science/Research
	Operating System :: OS Independent
	Programming Language :: Python :: 3 :: Only

[options]
packages = find_namespace:
package_dir = 
	= src
python_requires = >=3.8
install_requires = 
	cmake>=3.18.1

[options.package_data]
* = 
	*.hpp
	*.h
	*.cmake

[options.packages.find]
where = src
exclude = tests

[tools:isort]
line_length = 100

[flake8]
max-line-length = 100

